# PTaM

./: .gitignore  CMakeLists.txt  README.md  build  build_server  main.cpp  mytcpserver.cpp  mytcpserver.h  run  tcpserver.cpp  tcpserver.h
client/: CMakeLists.txt
client/docs/: Doxyfile
client/docs/html/: admintablewindow_8h_source.html  annotated.html  classAdminTableWindow-members.html  classAdminTableWindow.html  classClient-members.html  classClient.html  classExerciceWindow-members.html  classExerciceWindow.html  classExercicesTableWindow-members.html  classExercicesTableWindow.html  classLogin-members.html  classLogin.html  classRegisterWindow-members.html  classRegisterWindow.html  classSingletonDestroyer-members.html  classSingletonDestroyer.html  classes.html  client_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  exercicestablewindow_8h_source.html  exercicewindow_8h_source.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  login_8h_source.html  registerwindow_8h_source.html
client/docs/html/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_2.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
client/docs/latex/: admintablewindow_8h_source.tex  annotated.tex  classAdminTableWindow.eps  classAdminTableWindow.tex  classClient.tex  classExerciceWindow.eps  classExerciceWindow.tex  classExercicesTableWindow.eps  classExercicesTableWindow.tex  classLogin.tex  classRegisterWindow.eps  classRegisterWindow.tex  classSingletonDestroyer.tex  client_8h_source.tex  exercicestablewindow_8h_source.tex  exercicewindow_8h_source.tex  files.tex  hierarchy.tex  login_8h_source.tex  refman.tex  registerwindow_8h_source.tex
client/docs/rtf/: refman.rtf
client/include/: admintablewindow.h  client.h  exercicestablewindow.h  exercicewindow.h  login.h  mainwindow.h  registerwindow.h
client/src/: admintablewindow.cpp  client.cpp  exercicestablewindow.cpp  exercicewindow.cpp  login.cpp  main.cpp  mainwindow.cpp  registerwindow.cpp
client/ui/: admintablewindow.ui  exercicestablewindow.ui  exercicewindow.ui  login.ui  login.ui.autosave  mainwindow.ui  registerwindow.ui
server/: CMakeLists.txt  Dockerfile
server/docs/: Doxyfile
server/docs/html/: annotated.html  classDB-members.html  classDB.html  classDBDestroyer-members.html  classDBDestroyer.html  classExcercises-members.html  classExcercises.html  classMyTcpServer-members.html  classMyTcpServer.html  classServerFunctions-members.html  classServerFunctions.html  classes.html  db_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  excercises_8h_source.html  files.html  functions.html  functions_8h_source.html  functions_func.html  hierarchy.html  tcpserver_8h_source.html
server/docs/html/search/: all_1.js  all_4.js  all_6.js  all_7.js  all_9.js  classes_0.js  classes_1.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js
server/docs/latex/: annotated.tex  classDB.tex  classDBDestroyer.tex  classExcercises.tex  classMyTcpServer.tex  classServerFunctions.tex  db_8h_source.tex  excercises_8h_source.tex  files.tex  functions_8h_source.tex  hierarchy.tex  refman.tex  tcpserver_8h_source.tex
server/docs/rtf/: refman.rtf
server/include/: db.h  excercises.h  functions.h  mydb.h  singleton.h  tcpserver.h
server/src/: db.cpp  excercises.cpp  functions.cpp  functions.h  main.cpp  mydb.cpp  mydb.h  singleton.cpp  singleton.h  tcpserver.cpp  tcpserver.h  test.cpp
src/: Dockerfile  main.cpp
